[package]
name = "tb6612fng"
version = "0.2.0"
edition = "2021"
rust-version = "1.63"

description = "A `no_std` driver for the TB6612FNG motor driver."
repository = "https://github.com/rursprung/tb6612fng-rs"
categories = ["embedded", "hardware-support", "no-std", "no-std::no-alloc"]
keywords = ["tb6612fng", "driver", "motor", "controller", "embedded-hal-driver"]
license = "MIT OR Apache-2.0"

[dependencies]
embedded-hal = "=1.0.0-rc.3"

defmt = { version = "0.3", optional = true }

[dev-dependencies]
embedded-hal-mock = { version = "=0.10.0-rc.3", features = ["eh1"] }
