[package]
name = "nucleo-f401re-rtic-tb6612fng"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
cortex-m = { version = "0.7", features = ["critical-section-single-core"]}
cortex-m-rtic = "1.1.3"
panic-probe = { version = "0.3", features = ["print-defmt"] }

stm32f4xx-hal = { version = "0.14.0", features = ["stm32f401", "rtic", "rtic-monotonic"] }

defmt = "0.3.2"
defmt-rtt = "0.4"

# use `tb6612fng = "0.1"` in reality; path used here to ensure that the example always compiles against the latest master
tb6612fng = { path = "../.." }

[profile.release]
codegen-units = 1
lto = true
opt-level = 3
