[package]
name = "stm32f4-single-motor-example"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
cortex-m = { version = "0.7", features = ["critical-section-single-core"]}
cortex-m-rtic = "1.1.4"
panic-probe = { version = "0.3", features = ["print-defmt"] }

stm32f4xx-hal = { version = "0.20.0", features = ["stm32f401", "rtic1"] }

defmt = "0.3.5"
defmt-rtt = "0.4"

# use `tb6612fng = "0.1"` in reality; path used here to ensure that the example always compiles against the latest master
tb6612fng = { path = "../.." }

[profile.release]
codegen-units = 1
lto = true
opt-level = 3
